--- a/package.json
+++ b/package.json
@@ -3,19 +3,23 @@
   "version": "0.0.999",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^24.0.0",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
-    "@types/react-router-dom": "^5.1.3",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
-    "react-router-dom": "^5.1.2",
+    "@testing-library/jest-dom": "4.2.4",
+    "@testing-library/react": "9.3.2",
+    "@testing-library/user-event": "7.1.2",
+    "@types/jest": "24.0.0",
+    "@types/node": "12.0.0",
+    "@types/react": "16.9.0",
+    "@types/react-dom": "16.9.0",
+    "@types/react-router-dom": "5.1.3",
+    "i18next": "19.3.2",
+    "i18next-browser-languagedetector": "4.0.2",
+    "i18next-xhr-backend": "3.2.2",
+    "react": "16.13.0",
+    "react-dom": "16.13.0",
+    "react-i18next": "11.3.3",
+    "react-router-dom": "5.1.2",
     "react-scripts": "3.4.0",
-    "typescript": "~3.8.0"
+    "typescript": "3.8.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -38,6 +42,6 @@
     ]
   },
   "devDependencies": {
-    "node-sass": "^4.13.1"
+    "node-sass": "4.13.1"
   }
 }
